--- a/static_shared/ngTemplates/productCart.html
+++ b/static_shared/ngTemplates/productCart.html
@@ -46,18 +46,18 @@
                 </div>
               </div>
               <div style=" padding:10px 10px 10px 10px;margin:0px;height:60px" ng-if="!me.pk">
-                <div class="col-md-6 col-xs-6 col-sm-6 text-center" style="border-right:1px solid #808080;">
+         <!--        <div class="col-md-6 col-xs-6 col-sm-6 text-center" style="border-right:1px solid #808080;">
                   <span ng-click="mainPage();$event.stopPropagation();" style="cursor:pointer;color:#808080;">
                     <i class="fa fa-heart  fa-3x" ></i>
                   </span>
-                </div>
-                <div class="col-md-6 col-xs-6 col-sm-6 text-center">
-                  <span ng-click="mainPage();$event.stopPropagation();" style="cursor:pointer;color:#808080;">
-                    <i class="fa fa-shopping-cart fa-3x" ></i>
+                </div> -->
+                <div class=" col-md-offset-6 col-md-6 col-xs-12 col-sm-12 text-center">
+                  <span ng-click="createCookieDetail();$event.stopPropagation();" style="cursor:pointer;color:#808080;">
+                     <i class="fa fa-shopping-cart fa-3x" ></i>
                   </span>
                 </div>
               </div>
-              <div style="color:#808080; padding:10px 10px 10px 10px;margin:0px;height:60px" ng-if="list.added_cart>0">
+              <div style="color:#808080; padding:10px 10px 10px 10px;margin:0px;height:60px" ng-if="list.added_cart>0&&me.pk">
                 <div class="col-md-4 col-sm-4 col-xs-4 text-right">
                   <i class="fa fa-minus-circle fa-2x" style="cursor:pointer" ng-if="list.added_cart>0"  ng-click="decrement();$event.stopPropagation()"></i>
                 </div>
