--- a/ecommerce/static/ngTemplates/app.ecommerce.details.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.details.html
@@ -1,7 +1,6 @@
 <div class="container-fluid">
   <div class="col-md-8 col-md-offset-{{me != null ? '1' : '2' }} card bg-white">
     <div class="row" style="margin:0px 0px 30px 0px">
-
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb" style="margin-left:-15px;margin-right:-15px">
           <li class="breadcrumb-item" ng-repeat="b in breadcrumbList" ><a style="cursor:pointer" ng-click="$state.go('categories', {name : b})" >{{b}}</a></li>
@@ -58,7 +57,7 @@
           </div>
         </div>
         <div class="row" style="padding:10px;" ng-if="me != null">
-          <div class="col-md-6">
+          <div class="col-md-6" ng-if="showOptions">
             <div class="row container-fluid text-center" style="background-color:#ec1616; color:white; padding:5px 0px;">
               <span ng-click="buy(details)" style="cursor:pointer;">
                 <span style="font-size:15px;"><b> Buy Now </b></span>
@@ -66,13 +65,16 @@
               </span>
             </div>
           </div>
-          <div class="col-md-6 ">
+          <div class="col-md-6 " ng-if="showOptions">
             <div class="row container-fluid text-center" style="background-color:#164cec; color:white; padding:5px 0px;">
               <span ng-click="addToCart(details.pk)" style="cursor:pointer;">
                   <span style="font-size:15px;"><b> Add To Cart </b></span>
               <i class="fa fa-shopping-cart fa-2x"></i>
               </span>
             </div>
+          </div>
+          <div class="col-md-12" ng-if="!showOptions">
+            <span style="font-size:25px;color:#ef4a1e">Out Of Stock... Please Try Later</span>
           </div>
         </div>
         <div class="row" style="padding:10px;" ng-if="me == null">
