--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -316,7 +316,7 @@
                   <div class="col-md-12" ng-repeat="adr in savedAddress">
                     <div class="row" style="margin-top:15px">
                       <div class="col-md-1 col-xs-1 col-sm-1">
-                        <input ng-model="adr.pk" type="radio" name="radio" value="adr.pk" ng-click="show($index)">
+                        <input ng-model="check" type="radio" name="radio" value="adr.pk" ng-click="show($index)">
                       </div>
                       <div class="col-md-10 col-xs-7 col-sm-10">
                         <div class="row">
@@ -689,8 +689,11 @@
           </div>
           <div class="row" style="padding:20px;">
             <form >
-             <div class="form-group">
+             <div class="form-group" ng-if="!totalLimit">
                <input type="radio" name="modeOfPayment" ng-model="data.modeOfPayment" value="COD"> COD <br>
+             </div>
+             <div class="form-group" ng-if="totalLimit">
+               <input type="radio" name="modeOfPayment" ng-model="data.modeOfPayment" value="COD" disabled> COD (Cannot use this option as your total exceed  <i class="fa fa-inr"></i>{{limitValue}})<br>
              </div>
              <div class="form-group">
                <input type="radio" name="modeOfPayment" ng-model="data.modeOfPayment" value="Card"> Credit Card/ Debit Card / Net Banking / UPI
