--- a/ecommerce/static/ngTemplates/app.ecommerce.account.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.html
@@ -1,6 +1,6 @@
 
 
-<div class="container-fluid hidden-sm hidden-xs" style="margin:0px">
+<div class="container-fluid hidden-sm hidden-xs" style="margin:0px;">
   <div class="col-md-10 col-md-offset-1 card bg-white" style="display:block;position:relative;min-height:760px;padding-left:0px;">
     <div class="col-md-2  bg-blue" style="position:absolute; height:100%;">
       <div ui-view="menu"></div>
