--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-bottom:20px;">
+<div class="container-fluid" style="margin-bottom:20px;padding:0px">
   <div class="col-md-10 col-md-offset-1 card bg-white" style="display:block;position:relative;min-height:760px;padding-left:0px;margin-bottom:30px;">
 
     <div class="col-md-2 hidden-sm hidden-xs  bg-purple" style="position:absolute; height:100%;">
