--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.html
@@ -53,6 +53,12 @@
       </uib-tab-heading>
       <div ng-include="'/static/ngTemplates/app.ecommerce.vendor.configure.serviceArea.html'"></div>
     </uib-tab>
+    <uib-tab>
+      <uib-tab-heading>
+        Images
+      </uib-tab-heading>
+      <div ng-include="'/static/ngTemplates/app.ecommerce.vendor.configure.configImage.html'"></div>
+    </uib-tab>
 
     <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
       <uib-tab-heading>
