--- a/POS/static/ngTemplates/app.POS.product.item.html
+++ b/POS/static/ngTemplates/app.POS.product.item.html
@@ -8,7 +8,7 @@
       <div class="col-md-9" style="margin-top:10px;">
 
         <div class="row" style="padding-left:10px;">
-            <span style="font-size: 18px;">{{data.name}}</span> <span style="font-size: 18px;" ng-if="data.skuUnitpack"> Pack of {{data.skuUnitpack}} </span>
+            <span style="font-size: 18px;">{{data.name}} {{posProductDel}}</span> <span style="font-size: 18px;" ng-if="data.skuUnitpack"> Pack of {{data.skuUnitpack}} </span>
         </div>
         <div class="row">
           <div class="col-md-7" style="padding-right:0px;">
@@ -18,6 +18,7 @@
           <div class="col-md-5">
             <span>HSN/SAC:{{data.productMeta.code}}</span><br>
             <span>In Stock:{{data.inStock}}</span>
+
           </div>
 
         </div>
@@ -30,6 +31,11 @@
         </div>
         <div class="row" style="margin-top:10px;">
           <span><i class="fa fa-pencil" style="color: rgb(24, 108, 219);font-size: 20px;cursor:pointer;" ng-click="rowActionClicked('edit')"></i>
+          </span>
+        </div>
+
+        <div class="row" style="margin-top:10px;">
+          <span><i class="fa fa-trash" style="color: rgb(24, 108, 219);font-size: 20px;cursor:pointer;"  ng-click="rowActionClicked('delete')"></i>
           </span>
         </div>
       </div>
