--- a/ecommerce/static/ngTemplates/app.ecommerce.contact.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.contact.html
@@ -1,20 +1,16 @@
-
+<div class="row modal-header">
+  <div class="col-md-10 col-xs-10 col-sm-10 text-center" style="padding-left:25px">
+    <h3>Contact us</h3>
+  </div>
+    <div class="col-md-2 col-xs-2 col-sm-2" style="cursor:pointer;padding-top:10px">
+        <i ng-click="close()" class="fa fa-close fa-2x"></i>
+    </div>
+</div>
 <div class="row modal-body">
   <div class="container-fluid">
-    <div class="row">
-    <div class="col-md-10 col-xs-10 col-sm-10 text-center" style="padding-left:25px">
-      <h3>Contact us</h3>
-    </div>
-      <div class="col-md-2 col-xs-2 col-sm-2" style="cursor:pointer">
-          <i ng-click="close()" class="fa fa-close fa-lg"></i>
-      </div>
-    </div>
-    <hr style="margin:0px;border: solid 2px #DCDCDC;">
-     <div class="row">
       <div class="col-md-10 col-xs-12 col-sm-10 text-center">
         <strong>Toll free no : </strong> 180012345678 <br>
         <strong>e-mail : </strong> care@ecommerce.com <br>
       </div>
     </div>
-  </div>
 </div>
