--- a/POS/static/ngTemplates/app.POS.product.item.html
+++ b/POS/static/ngTemplates/app.POS.product.item.html
@@ -34,7 +34,7 @@
           </span>
         </div>
 
-        <div class="row" style="margin-top:10px;">
+        <div class="row" style="margin-top:10px;" ng-if="data.productOption">
           <span><i class="fa fa-trash" style="color: rgb(24, 108, 219);font-size: 20px;cursor:pointer;"  ng-click="rowActionClicked('delete')"></i>
           </span>
         </div>
