--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -105,7 +105,7 @@
     </div>
     <div class="col-md-2 text-left">
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Terms & Condition'.split(' ').join('-').toLowerCase()})">Terms & Condition</span><br>
-      <span style="font-size:12px;" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span><br>
+      <!-- <span style="font-size:12px;" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span><br> -->
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Cancellations'.split(' ').join('-').toLowerCase()})">Cancellations</span><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Returns'.split(' ').join('-').toLowerCase()})">Returns</span><br>
       <span style="font-size:12px;cursor:pointer;" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span>
@@ -169,7 +169,7 @@
       <!-- <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br> -->
       <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span><br/>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Terms & Condition'.split(' ').join('-').toLowerCase()})">Terms & Condition</span><br>
-      <span style="font-size:12px;" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span><br>
+      <!-- <span style="font-size:12px;" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span><br> -->
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Cancellations'.split(' ').join('-').toLowerCase()})">Cancellations</span><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Returns'.split(' ').join('-').toLowerCase()})">Returns</span><br>
       <span style="font-size:12px;cursor:pointer;" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span>
