--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -1,7 +1,7 @@
 <div class="row" style="margin:0px;">
-  <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding-right:20px;padding-left:20px;padding-top:0px;padding-bottom:20px">
-    <div style="padding:10px;" class="row card bg-white">
-      <h4>Categories</h4>
+  <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding-right:0px;padding-left:0px;padding-top:0px;padding-bottom:20px">
+    <!-- <div style="padding:10px;"> -->
+      <h4 style="padding-left:18px">Categories</h4>
       <div ng-repeat="g in genericProducts| limitTo:4" style="padding:0px;">
         <div class="col-md-3 anim-in-out anim-zoom-out">
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : g.name})">
@@ -17,15 +17,14 @@
           </div>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
 
   <div class="col-xs-12 col-sm-12 hidden-md hidden-lg" style="padding:40px;">
-    <div style="padding:10px;" class="row card bg-white">
       <h4>Categories</h4>
       <div ng-repeat="g in genericProducts| limitTo:4" style="padding:0px; ">
         <div class="col-xs-12 col-sm-6">
-          <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : g.name})">
+          <div class="container-fluid" style="cursor:pointer;padding-right:0px;padding-left:0px" ng-click="$state.go('categories' , {name : g.name})">
             <div class="row">
               <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
                 <img style="width:100%;height:280px" class="img" ng-src="{{g.visual}}" ng-if="g.visual.length>0">
@@ -39,7 +38,7 @@
         </div>
       </div>
     </div>
-  </div>
+
 </div>
 
 
