--- a/POS/static/ngTemplates/app.POS.invoices.html
+++ b/POS/static/ngTemplates/app.POS.invoices.html
@@ -17,6 +17,7 @@
     <div class="col-md-5">
       <div class="input-group pull-right" ng-if="!connected">
         <input type="text" class="form-control" placeholder="Please enter device ID" ng-model="connectData.deviceID">
+        <!-- <p class="help-block" style="font-size:12px">Please Connect The Device First</p> -->
         <span class="input-group-btn">
           <button type="button" class="btn btn-success" ng-click="connectDevice()">Connect</button>
         </span>
