--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -320,7 +320,7 @@
                       </div>
                       <div class="col-md-10 col-xs-7 col-sm-10">
                         <div class="row">
-                          <strong>{{me.first_name}} {{me.last_name}}</strong><br/> {{adr.title}} {{adr.landMark}} {{adr.street}}, {{adr.city}}, {{adr.state}}, {{adr.country}} - {{adr.pincode}}
+                          <strong>{{adr.title}}</strong><br/> {{adr.landMark}} {{adr.street}}, {{adr.city}}, {{adr.state}}, {{adr.country}} - {{adr.pincode}}
                         </div>
 
                         <div class="row" ng-if="$index==idx">
