--- a/ecommerce/static/ngTemplates/app.ecommerce.feedBack.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.feedBack.html
@@ -64,7 +64,7 @@
       <i ng-click="close()" class="fa fa-close fa-lg"></i>
     </div>
     <div class="col-md-11">
-      Send us your feeback / message / complaint or query!
+      Send us your feedback / message / complaint or query!
     </div>
   </div>
 </div>
