--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -1,10 +1,10 @@
-<div class="row bg-white ecomNav" style="height:10vh;width:100%;padding-top: 8px;padding-bottom: 8px;">
+<div class="row bg-white ecomNav" style="height:10vh;width:100%;padding-top:8px;padding-bottom: 8px;position:fixed;z-index:1;border-bottom:2px solid #4db056">
 
   <div class="col-xs-2 text-center">
     <img ng-click="$state.go('ecommerce')" src="/static/images/sterlin_select.png" style="height:7vh;cursor:pointer;" alt="">
   </div>
 
-  <div style="padding-top:1.5vh;" class="hidden-xs hidden-sm">
+  <div style="padding-top:2vh;" class="hidden-xs hidden-sm">
     <div class="col-xs-5" style="padding:0px;">
       <input type="text" style="width:100%;color: #000;text-indent: 10px;outline: none;border-radius: 7px;color:rgb(24, 89, 46);height: 40px;" ng-model="searchProduct.product" uib-typeahead="p as p.name for p in genericProductSearch($viewValue)" placeholder="{{settings.searchField}}">
     </div>
@@ -66,11 +66,6 @@
           <span style="background-color:green;height: 20px;width: 20px;  border-radius: 50%;display: table-cell;text-align: center;vertical-align: middle;color:white;position:relative;right: 5px" ng-if="inCart.length>0" class="text-center">{{inCart.length}}</span>
     </span>
   </div>
-<!--     <div class="col-xs-2 text-right hidden-lg hidden-md" ng-if="!me.pk" style="padding-top: 10px;color:rgb(24, 89, 46)">
-    <span ng-click="$state.go('account.cart')" style="cursor:pointer" > <i class="fa fa-shopping-cart fa-lg"></i>
-          <span style="background-color:green;height: 20px;width: 20px;  border-radius: 50%;display: table-cell;text-align: center;vertical-align: middle;color:white;position:relative;right: 5px" ng-if="inCart.length>0" class="text-center">{{addToCart.length}}</span>
-    </span>
-  </div> -->
 
   <div class="col-xs-4 text-center dropdown hidden-lg hidden-md " style="padding-top: 12px;padding-left:0px;padding-right: 0px;" ng-if="me.pk">
     <span class="dropdown-toggle" data-toggle="dropdown" style="cursor:pointer;color:rgb(24, 89, 46);"> {{me.first_name}} <img ng-src="{{me.pk | getDP}}" style="width: 15px;" alt=""></span>
@@ -82,25 +77,25 @@
     </ul>
   </div>
 
-</div>
-<div class="row bg-white ecomNav hidden-lg hidden-md " style="width:100%" >
-  <div class="col-xs-12" style="padding-right:0px; padding-left:0px;">
-    <input type="text" style="width:100%;color: #000;text-indent: 10px;outline: none;color:rgb(24, 89, 46);height:40px;" ng-model="searchProduct.product" uib-typeahead="p as p.name for p in genericProductSearch($viewValue)" placeholder="{{settings.searchField}}">
+  <div class="row bg-white ecomNav hidden-lg hidden-md " style="width:100%" >
+    <div class="col-xs-12" style="padding-right:0px; padding-left:0px;">
+      <input type="text" style="width:100%;color: #000;text-indent: 10px;outline: none;color:rgb(24, 89, 46);height:30px;" ng-model="searchProduct.product" uib-typeahead="p as p.name for p in genericProductSearch($viewValue)" placeholder="{{settings.searchField}}">
+    </div>
   </div>
 </div>
 
 
 
   <hr style="margin:0px;border: solid 2px #DCDCDC;">
-<div ng-if="$state.is('ecommerce') && bannerText" style="position:relative;height:60vh;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;background-size:cover;" class="card hidden-xs hidden-sm">
-  <img style="width:100%;cursor:pointer;height:56vh;background-attachment: fixed;background-position: center;" ng-repeat="b in slide.banners" ng-if="$index == slide.active" ng-src="{{b.image}}" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"/>
+<div ng-if="$state.is('ecommerce') && bannerText" style="position:relative;height:70vh;padding-top:60px;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;background-size:cover;" class="card hidden-xs hidden-sm">
+  <img style="width:100%;cursor:pointer;height:57vh;background-attachment: fixed;background-position: center;" ng-repeat="b in slide.banners" ng-if="$index == slide.active" ng-src="{{b.image}}" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"/>
 
   <!-- <div class="anim-in-out anim-zoom-out" style="padding-right:0px;padding-left:0px;margin-bottom:20px;border-bottom: solid 4px #eeeeee;overflow:hidden;height:40vh;background: url('{{b.image}}') no-repeat center center;background-size: cover;">
   </div> -->
 
 
 
-  <div class="row" style="background-color:#525252;position:absolute;bottom:0px;width:100%; height:4vh;margin:0px;">
+  <div class="row" style="background-color:#525252;position:absolute;bottom:0px;width:100%; height:5vh;margin:0px;">
     <ul style="padding:0px;">
       <li ng-click="changeSlide($index)" ng-init="onHover = False;" ng-mouseenter="onHover = true;" ng-mouseleave="onHover = false;" style="display:inline-block;min-width:{{100/slide.banners.length}}%;height:60px;cursor:pointer;" ng-repeat="s in slide.banners track by $index" class="text-center {{($index == slide.active || onHover) ? 'activeSlideTab' : ''}}">
         <span style="color:{{($index == slide.active || onHover) ? '#3c3c3c' : 'white'}};position:relative;top:-15px;margin-right: 105px;">
@@ -111,12 +106,12 @@
   </div>
 </div>
 
-<div ng-if="$state.is('ecommerce')&& !bannerText" style="position:relative;width:100%;display:border-box;overflow:hidden;background-size:cover;" class="hidden-xs hidden-sm ">
+<div ng-if="$state.is('ecommerce')&& !bannerText" style="position:relative;height:70vh;;width:100%;padding-top:60px;display:border-box;overflow:hidden;background-size:cover;" class="hidden-xs hidden-sm ">
 
     <!-- <img style="width:100%;cursor:pointer;height:60vh;background-attachment: fixed;background-position: center;position:absolute;z-index:none;" ng-repeat="b in slide.banners" ng-if="$index == slide.active" ng-src="{{b.image}}" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"/><br/> -->
 
 
-    <div  style="padding-right:0px;padding-left:0px;overflow:hidden;height:50vh;background: url('{{b.image}}') no-repeat center center;background-size: cover;"  ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})" ng-repeat="b in slide.banners" ng-if="$index == slide.active">
+    <div  style="padding-right:0px;padding-left:0px;overflow:hidden;height:60vh;background: url('{{b.image}}') no-repeat center center;background-size: cover;"  ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})" ng-repeat="b in slide.banners" ng-if="$index == slide.active">
     </div>
 
 
@@ -156,7 +151,7 @@
 </div>
 
 
-<div ng-if="$state.is('ecommerce')&& !bannerText" style="position:relative;height:60vh;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;" class="card hidden-md hidden-lg">
+<div ng-if="$state.is('ecommerce')&& !bannerText" style="position:relative;height:60vh;padding-top:65px;margin-bottom:10px;width:100%;display:border-box;overflow:hidden;" class="card hidden-md hidden-lg">
 
   <img ng-repeat="b in slide.banners" style="width:100%;cursor:pointer;height:60vh;background-attachment: fixed;background-position: center;position:absolute;z-index:none;background: url('{{b.imagePortrait}}') no-repeat center center;background-size: cover;"  ng-if="$index == slide.active" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"/><br/>
   <div class="col-xs-12" style="padding-left:0px">
