--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -5,7 +5,7 @@
   </div>
 
   <div style="padding-top:2vh;" class="hidden-xs hidden-sm">
-    <div class="col-xs-5 col-md-offset-1" style="padding:0px;padding-left:">
+    <div class="col-xs-5" style="padding:0px;padding-left:">
       <input type="text" style="width:100%;color: #000;text-indent: 10px;outline: none;border-radius: 7px;color:rgb(24, 89, 46);height: 40px;" ng-model="searchProduct.product" uib-typeahead="p as p.name for p in genericProductSearch($viewValue)" placeholder="{{settings.searchField}}" typeahead-template-url="/static/ngTemplates/app.ecommerce.search.typehead.html">
     </div>
   </div>
