--- a/ecommerce/static/ngTemplates/app.ecommerce.details.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.details.html
@@ -1,13 +1,21 @@
 <div class="container-fluid" >
-  <div class="col-md-8 col-md-offset-{{me != null ? '1' : '2' }} card bg-white">
-    <div class="row" style="margin:0px 0px 30px 0px">
+  <div class="col-md-8 col-md-offset-{{me != null ? '1' : '2' }} bg-white">
+    <div class="row hidden-sm hidden-xs" style="margin:0px 0px 30px 0px">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb" style="margin-left:-15px;margin-right:-15px">
-          <li class="breadcrumb-item" ng-repeat="b in breadcrumbList" ><a style="cursor:pointer" ng-click="$state.go('categories', {name : b})" >{{b}}</a></li>
+          <li class="breadcrumb-item" ng-repeat="b in breadcrumbList" ><a style="cursor:pointer" ng-click="$state.go('categories', {name : b.split(' ').join('_')})" >{{b}}</a></li>
           <li class="breadcrumb-item active" aria-current="page">{{details.product.name}}</li>
         </ol>
       </nav>
+    </div>
 
+    <div class="row hidden-md hidden-lg" style="margin:10px 0px 20px 0px">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb" style="margin-left:-15px;margin-right:-15px">
+          <li class="breadcrumb-item" ng-repeat="b in breadcrumbList" ><a style="cursor:pointer" ng-click="$state.go('categories', {name : b.split(' ').join('_')})" >{{b}}</a></li>
+          <li class="breadcrumb-item active" aria-current="page">{{details.product.name}}</li>
+        </ol>
+      </nav>
     </div>
     <div class="row container-fluid" style="padding:0px;">
       <div class="col-md-1 col-xs-3" style="padding:0px; cursor:pointer;">
