--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -4,7 +4,7 @@
       <h4 style="padding-left:18px">Categories</h4>
       <div ng-repeat="g in genericProducts| limitTo:4" style="padding:0px;">
         <div class="col-md-3 anim-in-out anim-zoom-out">
-          <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : g.name})">
+          <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : g.name.split(' ').join('_')})">
             <div class="row">
               <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;overflow:hidden;">
                 <img style="width: 100%;" class="img" ng-src="{{g.visual}}" ng-if="g.visual.length>0">
@@ -24,7 +24,7 @@
       <h4>Categories</h4>
       <div ng-repeat="g in genericProducts| limitTo:4" style="padding:0px; ">
         <div class="col-xs-12 col-sm-6">
-          <div class="container-fluid" style="cursor:pointer;padding-right:0px;padding-left:0px" ng-click="$state.go('categories' , {name : g.name})">
+          <div class="container-fluid" style="cursor:pointer;padding-right:0px;padding-left:0px" ng-click="$state.go('categories' , {name : g.name.split(' ').join('_')})">
             <div class="row">
               <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
                 <img style="width:100%;height:280px" class="img" ng-src="{{g.visual}}" ng-if="g.visual.length>0">
